# bridge-catalog-ui

./: .gitignore  application.py  setup.cfg  setup.py
.ebextensions/: python.config
.elasticbeanstalk/: config.global.yml
bridge-proccess/: application.py  requirements.txt
bridge-proccess/static/css/: bootstrap-icons.css  index.css
bridge-proccess/static/js/: index.js
bridge-proccess/templates/: create-role.html  error.html  feature-request.html  forms.html  header.html
bridge-ui/: package.json
bridge-ui/public/: bootstrap-icons.css  index.css  index.html
bridge-ui/src/: index.js
bridge-ui/src/App/: App.js
bridge-ui/src/App/components/: create-permission.jsx  create-role.jsx  create-settings.jsx  feature-request.jsx  func-component.jsx  home.jsx  nav.jsx
bridge-ui/src/utils/: constants.js
bridge_scripts/: find_latest_saved_versions.py  get_pull_requests.py  get_release_data.py  list_releases_pull.py  list_tags.py  main.py  pull_request_data.py  release_data_pull.py  save_dataframe.py
bridge_scripts/bridge_scripts.egg-info/: PKG-INFO  SOURCES.txt
bridge_scripts/bridgescripts.egg-info/: PKG-INFO  SOURCES.txt
bridge_scripts/tests/: static.py  test_list_tags.py  test_releases.py
scripts/: pull_request_data.py  save_dataframe.py
static/css/: index.css
static/js/: index.js
templates/: create-role.html  create-settings.html  forms.html  header.html  index.html
