[metadata]
name = bridge_scripts
version = 0.0.1
author = Kristijan Petrovski
author_email = K5rovski@gmail.com
description = Scripts to ease Bridge RC project
url = https://github.com/K5rovski/bridge-catalog-ui

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .